# docbrowser

./: .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  postCreated.sh  postStart.sh
.github/workflows/: ci.yml  create_release_and_bundle.yml  release.yml  test_on_pr.yml  uploading_artifacts_to_release.yml
docsets/: hoge.db3
src/: App.css  App.tsx  client.ts  main.tsx  routes.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: debug.rs  docset.rs  docsetDownloader.rs  docset_downloader.rs  feeds.rs  main.rs
src-tauri/src/docset/: downloader.rs  mod.rs
src-tauri/src/feeds/: mod.rs
src-tauri/src/router/: app.rs  mod.rs
src/components/: Button.tsx  Content.css  Content.tsx  Header.css  Header.tsx  Sidebar.css  Sidebar.tsx  components.d.tsx
src/components/atom/: Button.tsx
src/components/atoms/: Button.stories.ts  Button.tsx
src/components/atoms/DocPage/: index.tsx
src/components/atoms/Icon/: icon.css  icon.stories.ts  index.tsx
src/components/molecules/MenuItem/: MenuItem.css  index.tsx
src/components/organisms/: DocsetList.tsx
src/components/pages/: config_top.tsx  search_page.tsx
src/stories/: Header.stories.ts  Header.tsx  Page.tsx
src/types/rspc/: bindings.ts
