[package]
name = "docbrowser"
version = "0.0.0"
description = "A Tauri App"
authors = ["bundai223"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["global-shortcut-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
actix-rt = "2.8.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.29.1", features = ["full"] }
roxmltree = "0.18.0"
tar = "0.4.40"
flate2 = "1.0.27"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
