[package]
name = "docbrowser"
version = "0.0.0"
description = "A Tauri App"
authors = ["bundai223"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
actix-rt = "2.10.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rspc = "0.3.1"
rspc-tauri = "0.1.1"
tokio = { version = "1.42.0", features = ["full"] }
roxmltree = "0.20.0"
tar = "0.4.43"
flate2 = "1.0.32"
tauri-plugin-shell = "2"
specta = "2.0.0-rc.11" # Explicitly add specta version compatible with rspc 0.3.1

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
